// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionsOffshore Should match Snapshot With Loading is false 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: visible;"
  >
    <div>
      <div
        class="sc-ipXKqB kzvLcJ"
      >
        <div
          class="sc-hmXxxW cCHgrZ"
        >
          <div
            class="sc-cqCuEk tErsC"
          >
            <label
              class="sc-bdVaJa bvTLbG"
              for="activeRadio0"
            >
              <input
                data-test="activeRadio_0"
                id="activeRadio0"
                name="activeRadio"
                type="radio"
                value="Time Deposit"
              />
              <div
                class="sc-bwzfXH eqHwbz"
                for="activeRadio0"
              >
                Time Deposit
              </div>
            </label>
          </div>
          <div
            class="sc-dliRfk lkfsls"
          >
            <div
              class="sc-jAaTju beetnj"
              data-test="filterButton"
              spacing="[object Object]"
              type="outline"
            >
              <div
                class="sc-jDwBTQ kOjxVZ"
              >
                <span
                  class="sc-gipzik eUvGZx"
                  height="20"
                  spacing="[object Object]"
                  width="20"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17 2H15V1C15 0.734784 14.8946 0.48043 14.7071 0.292893C14.5196 0.105357 14.2652 0 14 0C13.7348 0 13.4804 0.105357 13.2929 0.292893C13.1054 0.48043 13 0.734784 13 1V2H7V1C7 0.734784 6.89464 0.48043 6.70711 0.292893C6.51957 0.105357 6.26522 0 6 0C5.73478 0 5.48043 0.105357 5.29289 0.292893C5.10536 0.48043 5 0.734784 5 1V2H3C2.20435 2 1.44129 2.31607 0.87868 2.87868C0.316071 3.44129 0 4.20435 0 5V17C0 17.7956 0.316071 18.5587 0.87868 19.1213C1.44129 19.6839 2.20435 20 3 20H17C17.7956 20 18.5587 19.6839 19.1213 19.1213C19.6839 18.5587 20 17.7956 20 17V5C20 4.20435 19.6839 3.44129 19.1213 2.87868C18.5587 2.31607 17.7956 2 17 2ZM18 17C18 17.2652 17.8946 17.5196 17.7071 17.7071C17.5196 17.8946 17.2652 18 17 18H3C2.73478 18 2.48043 17.8946 2.29289 17.7071C2.10536 17.5196 2 17.2652 2 17V10H18V17ZM18 8H2V5C2 4.73478 2.10536 4.48043 2.29289 4.29289C2.48043 4.10536 2.73478 4 3 4H5V5C5 5.26522 5.10536 5.51957 5.29289 5.70711C5.48043 5.89464 5.73478 6 6 6C6.26522 6 6.51957 5.89464 6.70711 5.70711C6.89464 5.51957 7 5.26522 7 5V4H13V5C13 5.26522 13.1054 5.51957 13.2929 5.70711C13.4804 5.89464 13.7348 6 14 6C14.2652 6 14.5196 5.89464 14.7071 5.70711C14.8946 5.51957 15 5.26522 15 5V4H17C17.2652 4 17.5196 4.10536 17.7071 4.29289C17.8946 4.48043 18 4.73478 18 5V8Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
              <span
                class="sc-gPEVay ipWdfZ"
              >
                OVERVIEW_TRANSACTION_PERIOD
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-kLIISr czSQSb"
        >
          <div
            class="sc-fjdhpX cqZjmJ"
            data-test="card_0"
            data-x="card"
          >
            <p
              class="sc-jzJRlG cqeucI"
              data-test="dateCard"
            >
              TODAY
            </p>
            <div
              class="sc-cSHVUG gpEWRt"
            >
              <div
                class="sc-kAzzGY TnUcY"
              >
                <span
                  class="sc-chPdSV NcSRQ"
                >
                  <p
                    class="sc-kgoBCf daiqdM"
                    data-test="Time Deposit"
                  >
                    Time Deposit
                  </p>
                  <span
                    class="sc-kGXeez nLnMR"
                  >
                    Time Deposit BOCOM BBM 60
                  </span>
                </span>
              </div>
              <br />
              <div
                class="sc-kAzzGY TnUcY"
              >
                <span
                  class="sc-chPdSV NcSRQ"
                >
                  <p
                    class="sc-kgoBCf daiqdM"
                  >
                    GROSS_VALUE
                  </p>
                  <span
                    class="sc-kGXeez nLnMR"
                  >
                    USD 133,952.45
                  </span>
                </span>
                <span
                  class="sc-chPdSV NcSRQ"
                >
                  <p
                    class="sc-kgoBCf daiqdM"
                  >
                    TYPE
                  </p>
                  <span
                    class="sc-kGXeez nLnMR"
                  >
                    REDEMPTION
                  </span>
                </span>
              </div>
            </div>
          </div>
          <span
            class="sc-qrIAp eLZhym"
            data-test="viewMore"
          >
            OVERVIEW_TRANSACTION_VIEW_MORE
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-ipXKqB kzvLcJ"
    >
      <div
        class="sc-hmXxxW cCHgrZ"
      >
        <div
          class="sc-cqCuEk tErsC"
        >
          <label
            class="sc-bdVaJa bvTLbG"
            for="activeRadio0"
          >
            <input
              data-test="activeRadio_0"
              id="activeRadio0"
              name="activeRadio"
              type="radio"
              value="Time Deposit"
            />
            <div
              class="sc-bwzfXH eqHwbz"
              for="activeRadio0"
            >
              Time Deposit
            </div>
          </label>
        </div>
        <div
          class="sc-dliRfk lkfsls"
        >
          <div
            class="sc-jAaTju beetnj"
            data-test="filterButton"
            spacing="[object Object]"
            type="outline"
          >
            <div
              class="sc-jDwBTQ kOjxVZ"
            >
              <span
                class="sc-gipzik eUvGZx"
                height="20"
                spacing="[object Object]"
                width="20"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 2H15V1C15 0.734784 14.8946 0.48043 14.7071 0.292893C14.5196 0.105357 14.2652 0 14 0C13.7348 0 13.4804 0.105357 13.2929 0.292893C13.1054 0.48043 13 0.734784 13 1V2H7V1C7 0.734784 6.89464 0.48043 6.70711 0.292893C6.51957 0.105357 6.26522 0 6 0C5.73478 0 5.48043 0.105357 5.29289 0.292893C5.10536 0.48043 5 0.734784 5 1V2H3C2.20435 2 1.44129 2.31607 0.87868 2.87868C0.316071 3.44129 0 4.20435 0 5V17C0 17.7956 0.316071 18.5587 0.87868 19.1213C1.44129 19.6839 2.20435 20 3 20H17C17.7956 20 18.5587 19.6839 19.1213 19.1213C19.6839 18.5587 20 17.7956 20 17V5C20 4.20435 19.6839 3.44129 19.1213 2.87868C18.5587 2.31607 17.7956 2 17 2ZM18 17C18 17.2652 17.8946 17.5196 17.7071 17.7071C17.5196 17.8946 17.2652 18 17 18H3C2.73478 18 2.48043 17.8946 2.29289 17.7071C2.10536 17.5196 2 17.2652 2 17V10H18V17ZM18 8H2V5C2 4.73478 2.10536 4.48043 2.29289 4.29289C2.48043 4.10536 2.73478 4 3 4H5V5C5 5.26522 5.10536 5.51957 5.29289 5.70711C5.48043 5.89464 5.73478 6 6 6C6.26522 6 6.51957 5.89464 6.70711 5.70711C6.89464 5.51957 7 5.26522 7 5V4H13V5C13 5.26522 13.1054 5.51957 13.2929 5.70711C13.4804 5.89464 13.7348 6 14 6C14.2652 6 14.5196 5.89464 14.7071 5.70711C14.8946 5.51957 15 5.26522 15 5V4H17C17.2652 4 17.5196 4.10536 17.7071 4.29289C17.8946 4.48043 18 4.73478 18 5V8Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <span
              class="sc-gPEVay ipWdfZ"
            >
              OVERVIEW_TRANSACTION_PERIOD
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-kLIISr czSQSb"
      >
        <div
          class="sc-fjdhpX cqZjmJ"
          data-test="card_0"
          data-x="card"
        >
          <p
            class="sc-jzJRlG cqeucI"
            data-test="dateCard"
          >
            TODAY
          </p>
          <div
            class="sc-cSHVUG gpEWRt"
          >
            <div
              class="sc-kAzzGY TnUcY"
            >
              <span
                class="sc-chPdSV NcSRQ"
              >
                <p
                  class="sc-kgoBCf daiqdM"
                  data-test="Time Deposit"
                >
                  Time Deposit
                </p>
                <span
                  class="sc-kGXeez nLnMR"
                >
                  Time Deposit BOCOM BBM 60
                </span>
              </span>
            </div>
            <br />
            <div
              class="sc-kAzzGY TnUcY"
            >
              <span
                class="sc-chPdSV NcSRQ"
              >
                <p
                  class="sc-kgoBCf daiqdM"
                >
                  GROSS_VALUE
                </p>
                <span
                  class="sc-kGXeez nLnMR"
                >
                  USD 133,952.45
                </span>
              </span>
              <span
                class="sc-chPdSV NcSRQ"
              >
                <p
                  class="sc-kgoBCf daiqdM"
                >
                  TYPE
                </p>
                <span
                  class="sc-kGXeez nLnMR"
                >
                  REDEMPTION
                </span>
              </span>
            </div>
          </div>
        </div>
        <span
          class="sc-qrIAp eLZhym"
          data-test="viewMore"
        >
          OVERVIEW_TRANSACTION_VIEW_MORE
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TransactionsOffshore Should match Snapshot With Loading is true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: visible;"
  >
    <div>
      <div
        class="sc-ipXKqB kzvLcJ"
      >
        <div
          class="sc-hmXxxW cCHgrZ"
        >
          <div
            class="sc-cqCuEk tErsC"
          >
            <label
              class="sc-bdVaJa bvTLbG"
              for="activeRadio0"
            >
              <input
                data-test="activeRadio_0"
                disabled=""
                id="activeRadio0"
                name="activeRadio"
                type="radio"
                value="Time Deposit"
              />
              <div
                class="sc-bwzfXH eqHwbz"
                for="activeRadio0"
              >
                Time Deposit
              </div>
            </label>
          </div>
          <div
            class="sc-dliRfk lkfsls"
          >
            <div
              class="sc-jAaTju bhdwhc"
              data-test="filterButton"
              disabled=""
              spacing="[object Object]"
              type="outline"
            >
              <div
                class="sc-jDwBTQ kOjxVZ"
              >
                <span
                  class="sc-gipzik eUvGZx"
                  height="20"
                  spacing="[object Object]"
                  width="20"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17 2H15V1C15 0.734784 14.8946 0.48043 14.7071 0.292893C14.5196 0.105357 14.2652 0 14 0C13.7348 0 13.4804 0.105357 13.2929 0.292893C13.1054 0.48043 13 0.734784 13 1V2H7V1C7 0.734784 6.89464 0.48043 6.70711 0.292893C6.51957 0.105357 6.26522 0 6 0C5.73478 0 5.48043 0.105357 5.29289 0.292893C5.10536 0.48043 5 0.734784 5 1V2H3C2.20435 2 1.44129 2.31607 0.87868 2.87868C0.316071 3.44129 0 4.20435 0 5V17C0 17.7956 0.316071 18.5587 0.87868 19.1213C1.44129 19.6839 2.20435 20 3 20H17C17.7956 20 18.5587 19.6839 19.1213 19.1213C19.6839 18.5587 20 17.7956 20 17V5C20 4.20435 19.6839 3.44129 19.1213 2.87868C18.5587 2.31607 17.7956 2 17 2ZM18 17C18 17.2652 17.8946 17.5196 17.7071 17.7071C17.5196 17.8946 17.2652 18 17 18H3C2.73478 18 2.48043 17.8946 2.29289 17.7071C2.10536 17.5196 2 17.2652 2 17V10H18V17ZM18 8H2V5C2 4.73478 2.10536 4.48043 2.29289 4.29289C2.48043 4.10536 2.73478 4 3 4H5V5C5 5.26522 5.10536 5.51957 5.29289 5.70711C5.48043 5.89464 5.73478 6 6 6C6.26522 6 6.51957 5.89464 6.70711 5.70711C6.89464 5.51957 7 5.26522 7 5V4H13V5C13 5.26522 13.1054 5.51957 13.2929 5.70711C13.4804 5.89464 13.7348 6 14 6C14.2652 6 14.5196 5.89464 14.7071 5.70711C14.8946 5.51957 15 5.26522 15 5V4H17C17.2652 4 17.5196 4.10536 17.7071 4.29289C17.8946 4.48043 18 4.73478 18 5V8Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
              <span
                class="sc-gPEVay ipWdfZ"
              >
                OVERVIEW_TRANSACTION_PERIOD
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-kLIISr czSQSb"
        >
          <div
            class="sc-hMqMXs cEqaxv"
            data-test="container"
          >
            <div
              class="sc-eHgmQL fSLGCS sc-bdVaJa iHZvIS"
            >
              <li
                class="sc-kkGfuU jCTSJw"
              >
                <ul
                  class="sc-iAyFgw fyBryV"
                >
                  <li
                    class="sc-hSdWYo fBedrP"
                  >
                    <div
                      class="sc-cvbbAY cMRWYM"
                    />
                  </li>
                  <li
                    class="sc-hSdWYo fBedrP"
                  >
                    <div
                      class="sc-cvbbAY cMRWYM"
                    />
                  </li>
                  <li
                    class="sc-hSdWYo fBedrP"
                  >
                    <div
                      class="sc-cvbbAY cMRWYM"
                    />
                  </li>
                </ul>
              </li>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-ipXKqB kzvLcJ"
    >
      <div
        class="sc-hmXxxW cCHgrZ"
      >
        <div
          class="sc-cqCuEk tErsC"
        >
          <label
            class="sc-bdVaJa bvTLbG"
            for="activeRadio0"
          >
            <input
              data-test="activeRadio_0"
              disabled=""
              id="activeRadio0"
              name="activeRadio"
              type="radio"
              value="Time Deposit"
            />
            <div
              class="sc-bwzfXH eqHwbz"
              for="activeRadio0"
            >
              Time Deposit
            </div>
          </label>
        </div>
        <div
          class="sc-dliRfk lkfsls"
        >
          <div
            class="sc-jAaTju bhdwhc"
            data-test="filterButton"
            disabled=""
            spacing="[object Object]"
            type="outline"
          >
            <div
              class="sc-jDwBTQ kOjxVZ"
            >
              <span
                class="sc-gipzik eUvGZx"
                height="20"
                spacing="[object Object]"
                width="20"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 2H15V1C15 0.734784 14.8946 0.48043 14.7071 0.292893C14.5196 0.105357 14.2652 0 14 0C13.7348 0 13.4804 0.105357 13.2929 0.292893C13.1054 0.48043 13 0.734784 13 1V2H7V1C7 0.734784 6.89464 0.48043 6.70711 0.292893C6.51957 0.105357 6.26522 0 6 0C5.73478 0 5.48043 0.105357 5.29289 0.292893C5.10536 0.48043 5 0.734784 5 1V2H3C2.20435 2 1.44129 2.31607 0.87868 2.87868C0.316071 3.44129 0 4.20435 0 5V17C0 17.7956 0.316071 18.5587 0.87868 19.1213C1.44129 19.6839 2.20435 20 3 20H17C17.7956 20 18.5587 19.6839 19.1213 19.1213C19.6839 18.5587 20 17.7956 20 17V5C20 4.20435 19.6839 3.44129 19.1213 2.87868C18.5587 2.31607 17.7956 2 17 2ZM18 17C18 17.2652 17.8946 17.5196 17.7071 17.7071C17.5196 17.8946 17.2652 18 17 18H3C2.73478 18 2.48043 17.8946 2.29289 17.7071C2.10536 17.5196 2 17.2652 2 17V10H18V17ZM18 8H2V5C2 4.73478 2.10536 4.48043 2.29289 4.29289C2.48043 4.10536 2.73478 4 3 4H5V5C5 5.26522 5.10536 5.51957 5.29289 5.70711C5.48043 5.89464 5.73478 6 6 6C6.26522 6 6.51957 5.89464 6.70711 5.70711C6.89464 5.51957 7 5.26522 7 5V4H13V5C13 5.26522 13.1054 5.51957 13.2929 5.70711C13.4804 5.89464 13.7348 6 14 6C14.2652 6 14.5196 5.89464 14.7071 5.70711C14.8946 5.51957 15 5.26522 15 5V4H17C17.2652 4 17.5196 4.10536 17.7071 4.29289C17.8946 4.48043 18 4.73478 18 5V8Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <span
              class="sc-gPEVay ipWdfZ"
            >
              OVERVIEW_TRANSACTION_PERIOD
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-kLIISr czSQSb"
      >
        <div
          class="sc-hMqMXs cEqaxv"
          data-test="container"
        >
          <div
            class="sc-eHgmQL fSLGCS sc-bdVaJa iHZvIS"
          >
            <li
              class="sc-kkGfuU jCTSJw"
            >
              <ul
                class="sc-iAyFgw fyBryV"
              >
                <li
                  class="sc-hSdWYo fBedrP"
                >
                  <div
                    class="sc-cvbbAY cMRWYM"
                  />
                </li>
                <li
                  class="sc-hSdWYo fBedrP"
                >
                  <div
                    class="sc-cvbbAY cMRWYM"
                  />
                </li>
                <li
                  class="sc-hSdWYo fBedrP"
                >
                  <div
                    class="sc-cvbbAY cMRWYM"
                  />
                </li>
              </ul>
            </li>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
